package org.com.br.Oficina;

import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;

@NoArgsConstructor
@AllArgsConstructor
@Getter
@Setter
public class Oficina {

private int idOficina;

private String nome;

private String email;

private String complemento;

private String logradouro;

private String numero;

private int ddi;

private int ddd;

private int telefone;


}
